# malflow

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile_deb  LICENSE.txt  MANIFEST.in  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: build.yml  python-app.yml
src/bagnet_pytorch/: bagnet_test.py  config.py  constants.py  dataloader.py  main.py  plot_heatmaps.py  pytorchnet.py
src/core/api/: malware_bazaar.py
src/core/data/: __init__.py  bodmas.py  malimg.py  malware_bazaar.py
src/core/model/: __init__.py  call_graph.py  call_graph_compressed.py  call_graph_image.py  function.py  instruction.py  radare2_definitions.py  sample.py
src/core/model/radare2_definitions/: __init__.py  mnemonics.py  registers.py  sanitizer.py
src/core/processors/: bodmas.py  util.py
src/core/processors/bagnet/: Dockerfile  README.md  docker-compose.yml  download_dependencies.sh  environment.yml  hparam_tuner.py  hparam_tuner.sh  hparams.py  main.py  plot_heatmaps.py  train.py  train_definitions.py  train_dockerless.sh  train_dockerless_cpu.sh  train_dockerless_gpu.sh
src/core/processors/cg_image_classification/: Dockerfile  README.md  docker-compose.yml  download_dependencies.sh  hparam_tuner.py  hparam_tuner.sh  hparams.py  paths.py  plot_heatmaps.py  train_definitions.py  train_dockerless.sh  train_dockerless_cpu.sh  train_dockerless_gpu.sh
src/core/processors/r2_scanner/: augmentation_metaengine.py  augmentation_pymetangine.py  create_dfs.py  create_images.py  paths.py  scan_instructions.py  scan_samples.py  unpacker.py
src/core/util/: config.py  misc.py  validators.py
src/helpers/: README.md  detect_it_easy.py  ground_truth.py  scraper_mnemonic_info.py
src/helpers/mendeley/: upload.py
src/helpers/readme/: load_instruction.py
src/malflow/: README.md  __init__.py  __main__.py  cli.py
src/malflow/cli/: commands.py  formatters.py  main.py
src/malflow/cli/examples/: cli_usage.py
src/malflow/util/: config.py  logger.py  misc.py  validators.py
src/notebooks/: bodmas_baseline.GIT-TRACKED.ipynb  track_notebooks.sh
src/processors/: util.py
src/processors/cg_image_classification/: Dockerfile  docker-compose.yml  hparams.py  paths.py  plot_heatmaps.py  train_definitions.py
src/processors/r2_scanner/: augmentation_metaengine.py  create_dfs.py  create_images.py  paths.py  scan_instructions.py  scan_samples.py  unpacker.py
src/util/: config.py  logger.py  misc.py  validators.py
src/util/compression/: benchmark.py  compression.py
test/: test.py  test_image_classification.py
test/cases/: call_graph.py  instruction.py  instruction_data.py  proc_cg_image_classification.py  r2_sanitizer.py  r2_scanner.py  r2_scanner_data.py
test/cases/data/: call_graph_data.py  instruction_data.py  r2_sanitizer_data.py  r2_scanner_data.py
(+38 files in other folders)
