[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "malflow"
version = "0.0.2"
description = "Malware callgraph analysis"
readme = "README.md"
requires-python = ">= 3.8, < 3.9"
keywords = ["sample", "setuptools", "development"]
authors = [
  { name="Attila Mester", email="attilamester21@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["src"]
include = ["malflow"]

[project.urls]
Homepage = "https://github.com/attilamester/malflow"
Issues = "https://github.com/attilamester/malflow/issues"

[project.scripts]
malflow = "malflow:main"
