[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "malflow"
version = "0.0.11"
description = "Malware callgraph analysis"
readme = "src/malflow/README.md"
requires-python = ">= 3.8, < 3.11"
keywords = ["sample", "setuptools", "development"]
authors = [
  { name="Attila Mester", email="attilamester21@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "Brotli",
    "networkx>=2.7.0",
    "numpy>=1.22.0,<=2.2.6",
    "pygraphviz",
    "python-dotenv",
    "r2pipe==1.8.8",
    "requests",
    "rich>=13.0.0",
    "pyyaml>=6.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["malflow"]

[project.urls]
Homepage = "https://github.com/attilamester/malflow"
Issues = "https://github.com/attilamester/malflow/issues"

[project.scripts]
malflow = "malflow.cli.main:main"
